Package_Tools/include-C/llvm-c-20/llvm-c/in_arbeit/pas/Core.pas

{*
 * Obtain the next parameter to a function.
 *
 * This takes an LLVMValueRef obtained from LLVMGetFirstParam() (which is
 * actually a wrapped iterator) and obtains the next parameter from the
 * underlying iterator.
  }
function LLVMGetNextParam(Arg:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the previous parameter to a function.
 *
 * This is the opposite of LLVMGetNextParam().
  }
function LLVMGetPreviousParam(Arg:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Set the alignment for a function parameter.
 *
 * @see llvm::Argument::addAttr()
 * @see llvm::AttrBuilder::addAlignmentAttr()
  }
procedure LLVMSetParamAlignment(Arg:TLLVMValueRef; Align:dword);cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueGlobalIFunc IFuncs
 *
 * Functions in this group relate to indirect functions.
 *
 * Functions in this group expect LLVMValueRef instances that correspond
 * to llvm::GlobalIFunc instances.
 *
 * @
  }
{*
 * Add a global indirect function to a module under a specified name.
 *
 * @see llvm::GlobalIFunc::create()
  }
function LLVMAddGlobalIFunc(M:TLLVMModuleRef; Name:Pchar; NameLen:Tsize_t; Ty:TLLVMTypeRef; AddrSpace:dword; 
           Resolver:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a GlobalIFunc value from a Module by its name.
 *
 * The returned value corresponds to a llvm::GlobalIFunc value.
 *
 * @see llvm::Module::getNamedIFunc()
  }
function LLVMGetNamedGlobalIFunc(M:TLLVMModuleRef; Name:Pchar; NameLen:Tsize_t):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain an iterator to the first GlobalIFunc in a Module.
 *
 * @see llvm::Module::ifunc_begin()
  }
function LLVMGetFirstGlobalIFunc(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain an iterator to the last GlobalIFunc in a Module.
 *
 * @see llvm::Module::ifunc_end()
  }
function LLVMGetLastGlobalIFunc(M:TLLVMModuleRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Advance a GlobalIFunc iterator to the next GlobalIFunc.
 *
 * Returns NULL if the iterator was already at the end and there are no more
 * global aliases.
  }
function LLVMGetNextGlobalIFunc(IFunc:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Decrement a GlobalIFunc iterator to the previous GlobalIFunc.
 *
 * Returns NULL if the iterator was already at the beginning and there are
 * no previous global aliases.
  }
function LLVMGetPreviousGlobalIFunc(IFunc:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Retrieves the resolver function associated with this indirect function, or
 * NULL if it doesn't not exist.
 *
 * @see llvm::GlobalIFunc::getResolver()
  }
function LLVMGetGlobalIFuncResolver(IFunc:TLLVMValueRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Sets the resolver function associated with this indirect function.
 *
 * @see llvm::GlobalIFunc::setResolver()
  }
procedure LLVMSetGlobalIFuncResolver(IFunc:TLLVMValueRef; Resolver:TLLVMValueRef);cdecl;external libllvm;
{*
 * Remove a global indirect function from its parent module and delete it.
 *
 * @see llvm::GlobalIFunc::eraseFromParent()
  }
procedure LLVMEraseGlobalIFunc(IFunc:TLLVMValueRef);cdecl;external libllvm;
{*
 * Remove a global indirect function from its parent module.
 *
 * This unlinks the global indirect function from its containing module but
 * keeps it alive.
 *
 * @see llvm::GlobalIFunc::removeFromParent()
  }
procedure LLVMRemoveGlobalIFunc(IFunc:TLLVMValueRef);cdecl;external libllvm;
{*
 * @
  }
{*
 * @
  }
{*
 * @
  }
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueMetadata Metadata
 *
 * @
  }
{*
 * Create an MDString value from a given string value.
 *
 * The MDString value does not take ownership of the given string, it remains
 * the responsibility of the caller to free it.
 *
 * @see llvm::MDString::get()
  }
function LLVMMDStringInContext2(C:TLLVMContextRef; Str:Pchar; SLen:Tsize_t):TLLVMMetadataRef;cdecl;external libllvm;
{*
 * Create an MDNode value with the given array of operands.
 *
 * @see llvm::MDNode::get()
  }
function LLVMMDNodeInContext2(C:TLLVMContextRef; MDs:PLLVMMetadataRef; Count:Tsize_t):TLLVMMetadataRef;cdecl;external libllvm;
{*
 * Obtain a Metadata as a Value.
  }
function LLVMMetadataAsValue(C:TLLVMContextRef; MD:TLLVMMetadataRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain a Value as a Metadata.
  }
function LLVMValueAsMetadata(Val:TLLVMValueRef):TLLVMMetadataRef;cdecl;external libllvm;
{*
 * Obtain the underlying string from a MDString value.
 *
 * @param V Instance to obtain string from.
 * @param Length Memory address which will hold length of returned string.
 * @return String data in MDString.
  }
function LLVMGetMDString(V:TLLVMValueRef; Length:Pdword):Pchar;cdecl;external libllvm;
{*
 * Obtain the number of operands from an MDNode value.
 *
 * @param V MDNode to get number of operands from.
 * @return Number of operands of the MDNode.
  }
function LLVMGetMDNodeNumOperands(V:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Obtain the given MDNode's operands.
 *
 * The passed LLVMValueRef pointer should point to enough memory to hold all of
 * the operands of the given MDNode (see LLVMGetMDNodeNumOperands) as
 * LLVMValueRefs. This memory will be populated with the LLVMValueRefs of the
 * MDNode's operands.
 *
 * @param V MDNode to get the operands from.
 * @param Dest Destination array for operands.
  }
procedure LLVMGetMDNodeOperands(V:TLLVMValueRef; Dest:PLLVMValueRef);cdecl;external libllvm;
{*
 * Replace an operand at a specific index in a llvm::MDNode value.
 *
 * @see llvm::MDNode::replaceOperandWith()
  }
procedure LLVMReplaceMDNodeOperandWith(V:TLLVMValueRef; Index:dword; Replacement:TLLVMMetadataRef);cdecl;external libllvm;
{* Deprecated: Use LLVMMDStringInContext2 instead.  }
function LLVMMDStringInContext(C:TLLVMContextRef; Str:Pchar; SLen:dword):TLLVMValueRef;cdecl;external libllvm;
{* Deprecated: Use LLVMMDStringInContext2 instead.  }
function LLVMMDString(Str:Pchar; SLen:dword):TLLVMValueRef;cdecl;external libllvm;
{* Deprecated: Use LLVMMDNodeInContext2 instead.  }
function LLVMMDNodeInContext(C:TLLVMContextRef; Vals:PLLVMValueRef; Count:dword):TLLVMValueRef;cdecl;external libllvm;
{* Deprecated: Use LLVMMDNodeInContext2 instead.  }
function LLVMMDNode(Vals:PLLVMValueRef; Count:dword):TLLVMValueRef;cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreOperandBundle Operand Bundles
 *
 * Functions in this group operate on LLVMOperandBundleRef instances that
 * correspond to llvm::OperandBundleDef instances.
 *
 * @see llvm::OperandBundleDef
 *
 * @
  }
{*
 * Create a new operand bundle.
 *
 * Every invocation should be paired with LLVMDisposeOperandBundle() or memory
 * will be leaked.
 *
 * @param Tag Tag name of the operand bundle
 * @param TagLen Length of Tag
 * @param Args Memory address of an array of bundle operands
 * @param NumArgs Length of Args
  }
function LLVMCreateOperandBundle(Tag:Pchar; TagLen:Tsize_t; Args:PLLVMValueRef; NumArgs:dword):TLLVMOperandBundleRef;cdecl;external libllvm;
{*
 * Destroy an operand bundle.
 *
 * This must be called for every created operand bundle or memory will be
 * leaked.
  }
procedure LLVMDisposeOperandBundle(Bundle:TLLVMOperandBundleRef);cdecl;external libllvm;
{*
 * Obtain the tag of an operand bundle as a string.
 *
 * @param Bundle Operand bundle to obtain tag of.
 * @param Len Out parameter which holds the length of the returned string.
 * @return The tag name of Bundle.
 * @see OperandBundleDef::getTag()
  }
function LLVMGetOperandBundleTag(Bundle:TLLVMOperandBundleRef; Len:Psize_t):Pchar;cdecl;external libllvm;
{*
 * Obtain the number of operands for an operand bundle.
 *
 * @param Bundle Operand bundle to obtain operand count of.
 * @return The number of operands.
 * @see OperandBundleDef::input_size()
  }
function LLVMGetNumOperandBundleArgs(Bundle:TLLVMOperandBundleRef):dword;cdecl;external libllvm;
{*
 * Obtain the operand for an operand bundle at the given index.
 *
 * @param Bundle Operand bundle to obtain operand of.
 * @param Index An operand index, must be less than
 * LLVMGetNumOperandBundleArgs().
 * @return The operand.
  }
function LLVMGetOperandBundleArgAtIndex(Bundle:TLLVMOperandBundleRef; Index:dword):TLLVMValueRef;cdecl;external libllvm;
{*
 * @
  }
{*
 * @defgroup LLVMCCoreValueBasicBlock Basic Block
 *
 * A basic block represents a single entry single exit section of code.
 * Basic blocks contain a list of instructions which form the body of
 * the block.
 *
 * Basic blocks belong to functions. They have the type of label.
 *
 * Basic blocks are themselves values. However, the C API models them as
 * LLVMBasicBlockRef.
 *
 * @see llvm::BasicBlock
 *
 * @
  }
{*
 * Convert a basic block instance to a value type.
  }
function LLVMBasicBlockAsValue(BB:TLLVMBasicBlockRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Determine whether an LLVMValueRef is itself a basic block.
  }
function LLVMValueIsBasicBlock(Val:TLLVMValueRef):TLLVMBool;cdecl;external libllvm;
{*
 * Convert an LLVMValueRef to an LLVMBasicBlockRef instance.
  }
function LLVMValueAsBasicBlock(Val:TLLVMValueRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Obtain the string name of a basic block.
  }
function LLVMGetBasicBlockName(BB:TLLVMBasicBlockRef):Pchar;cdecl;external libllvm;
{*
 * Obtain the function to which a basic block belongs.
 *
 * @see llvm::BasicBlock::getParent()
  }
function LLVMGetBasicBlockParent(BB:TLLVMBasicBlockRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the terminator instruction for a basic block.
 *
 * If the basic block does not have a terminator (it is not well-formed
 * if it doesn't), then NULL is returned.
 *
 * The returned LLVMValueRef corresponds to an llvm::Instruction.
 *
 * @see llvm::BasicBlock::getTerminator()
  }
function LLVMGetBasicBlockTerminator(BB:TLLVMBasicBlockRef):TLLVMValueRef;cdecl;external libllvm;
{*
 * Obtain the number of basic blocks in a function.
 *
 * @param Fn Function value to operate on.
  }
function LLVMCountBasicBlocks(Fn:TLLVMValueRef):dword;cdecl;external libllvm;
{*
 * Obtain all of the basic blocks in a function.
 *
 * This operates on a function value. The BasicBlocks parameter is a
 * pointer to a pre-allocated array of LLVMBasicBlockRef of at least
 * LLVMCountBasicBlocks() in length. This array is populated with
 * LLVMBasicBlockRef instances.
  }
procedure LLVMGetBasicBlocks(Fn:TLLVMValueRef; BasicBlocks:PLLVMBasicBlockRef);cdecl;external libllvm;
{*
 * Obtain the first basic block in a function.
 *
 * The returned basic block can be used as an iterator. You will likely
 * eventually call into LLVMGetNextBasicBlock() with it.
 *
 * @see llvm::Function::begin()
  }
function LLVMGetFirstBasicBlock(Fn:TLLVMValueRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Obtain the last basic block in a function.
 *
 * @see llvm::Function::end()
  }
function LLVMGetLastBasicBlock(Fn:TLLVMValueRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Advance a basic block iterator.
  }
function LLVMGetNextBasicBlock(BB:TLLVMBasicBlockRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Go backwards in a basic block iterator.
  }
function LLVMGetPreviousBasicBlock(BB:TLLVMBasicBlockRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Obtain the basic block that corresponds to the entry point of a
 * function.
 *
 * @see llvm::Function::getEntryBlock()
  }
function LLVMGetEntryBasicBlock(Fn:TLLVMValueRef):TLLVMBasicBlockRef;cdecl;external libllvm;
{*
 * Insert the given basic block after the insertion point of the given builder.
 *
 * The insertion point must be valid.
 *
 * @see llvm::Function::BasicBlockListType::insertAfter()
  }
procedure LLVMInsertExistingBasicBlockAfterInsertBlock(Builder:TLLVMBuilderRef; BB:TLLVMBasicBlockRef);cdecl;external libllvm;
{*
 * Append the given basic block to the basic block list of the given function.
 *
 * @see llvm::Function::BasicBlockListType::push_back()
  }
procedure LLVMAppendExistingBasicBlock(Fn:TLLVMValueRef; BB:TLLVMBasicBlockRef);cdecl;external libllvm;
